<resources>
    <string name="app_name">Projet_Dev_Mobil</string>
    <string name="nom">Nom</string>
    <string name="v_rification_mots_de_passe">Vérification mots de passe</string>
    <string name="sexe">Sexe</string>
    <string name="homme">Homme</string>
    <string name="inscription">Inscription</string>
    <string name="femme">Femme</string>
    <string name="prenom">Prenom</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="mots_de_passe">Mots de passe</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="facile">Facile</string>
    <string name="expert">Expert</string>
    <string name="difficile">Difficile</string>
    <string name="modes_de_jeu">Modes de jeu</string>
    <string name="color_memory">Color Memory</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="exemple_email">example@example.com</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="user">User :</string>
    <string name="username">Username</string>
    <string name="score">Points :</string>
    <string name="start"> Jouer </string>
    <string name="couleur">Couleur :</string>
    <string name="jouer">Jouer</string>
    <string name="niveau">Niveau :</string>
    <string name="vies">vies :</string>
    <string name="palier">palier :</string>
    <string name="points">points</string>
    <string name="mail">adresse@mail.com</string>
    <string name="scorepoints">ScorePoints</string>
    <string name="chrono_indisponible">chrono (indisponible)</string>
</resources>