<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game_choice">

    <TextView
        android:id="@+id/gamemodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modes_de_jeu"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_memory"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/BoutonFacile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facile"
            android:textSize="18sp" />

        <Button
            android:id="@+id/BoutonDifficile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/difficile"
            android:textSize="18sp" />

        <Button
            android:id="@+id/BoutonExpert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expert"
            android:textSize="18sp" />

        <Button
            android:id="@+id/BoutonChrono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chrono"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/User"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        app:layout_constraintStart_toEndOf="@+id/textViewUser"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>