<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Red"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/red"
                android:textSize="36sp"
                app:backgroundTint="#E40C0C" />

            <Button
                android:id="@+id/Yellow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/yellow"
                android:textSize="36sp"
                app:backgroundTint="#C3B114" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Green"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/green"
                android:textSize="36sp"
                app:backgroundTint="#4DC11B" />

            <Button
                android:id="@+id/Blue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/blue"
                android:textSize="36sp"
                app:backgroundTint="#46C2E1" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>